fluxcd/repo/infrastructure/staging/fundamental-apps/traefik/resources/middleware-longhorn-dashboard-basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-dashboard-basic-auth
spec:
  basicAuth:
    secret: longhorn-dashboard-basic-auth
