fluxcd/repo/infrastructure/staging/fundamental-apps/traefik/resources/ingress-route-prometheus-pushgateway.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-pushgateway
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`promgw.stg.example.com`)
      kind: Rule
      services:
        - name: prometheus-pushgateway
          port: 9091
