fluxcd/repo/infrastructure/staging/fundamental-apps/traefik/resources/ingress-route-public-dashboard-stg.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-public-dashboard-stg
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: (Host(`traefik-dashboard.stg.example.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`)))
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basic-auth
          namespace: infrastructure
      services:
        - name: api@internal
          kind: TraefikService
