fluxcd/repo/infrastructure/staging/fundamental-apps/traefik/resources/ingress-route-public-longhorn-stg.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-public-dashboard-stg
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`longhorn.stg.example.com`)
      kind: Rule
      middlewares:
        - name: longhorn-dashboard-basic-auth
          namespace: infrastructure
      services:
        - name: infrastructure-longhorn-frontend-80@kubernetes
          kind: TraefikService
